[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "df"
version = "0.1.0"
authors = [
  { name="DBCM Technologies", email="dbcmtech+dev@gmail.com" },
]
description = "A HTTP File Server"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/DBCM-Technologies/df"
Issues = "https://github.com/DBCM-Technologies/df/issues"
